# django-terraform-http-backend

./: .gitignore  LICENSE  MANIFEST.in  Makefile  pyproject.toml
django_terraform_http_backend/: admin.py  apps.py  models.py  urls.py  views.py
django_terraform_http_backend/migrations/: 0001_initial.py
